--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+        <nav>
+            <a href="index.html" class="myname">Peter Giordano</a>
+            <ul class="navigation">
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Groceries</a></li>
+            </ul>
+        </nav>
+        <div>
+            <h1>Peter Giordano</h1>
+            <h3>A Budding Programmer Near You</h3>
+        </div>
+    </header>
+    <main>
+        <p>Hi, I'm Peter.</p>
+
+        <h2>Portfolio</h2>
+        <div class="portfolio grid">
+            <div class="box a">Image 1</div>
+            <div class="box b">Image 2</div>
+            <div class="box c">Image 3</div>
+        </div>
+
+        <h2>Contact</h2>
+    </main>
 	<script src="index.js"></script>
   </body>
 </html>
