--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
         <nav>
             <a href="index.html" class="myname">Peter Giordano</a>
             <ul class="navigation">
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Groceries</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <div>
+    </header>
+    <main>
+        <div class="heading">
             <h1>Peter Giordano</h1>
             <h3>A Budding Programmer Near You</h3>
         </div>
-    </header>
-    <main>
         <p>Hi, I'm Peter.</p>
 
         <h2>Portfolio</h2>
-        <div class="portfolio grid">
+        <div class="portfolio flex">
             <div class="box a">Image 1</div>
             <div class="box b">Image 2</div>
             <div class="box c">Image 3</div>
